[package]
name = "aes_crypto"
version = "1.0.0"
authors = ["Sayantan Chakraborty <schakraborty.student@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A platform-agnostic library for the AES cipher (Rijndael)"
repository = "https://github.com/sayantn/aes"
keywords = ["crypto", "aes", "rijndael"]
categories = ["cryptography"]

[features]
vaes = []

[dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
hex = "0.4.3"
lazy_static = "1.4.0"