[package]
name = "aes_crypto"
version = "1.3.0"
authors = ["Sayantan Chakraborty <schakraborty.student@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A platform-agnostic library for the AES cipher (Rijndael)"
repository = "https://github.com/sayantn/aes"
keywords = ["crypto", "aes", "rijndael", "no_std"]
categories = ["cryptography", "no-std", "no-std::no-alloc"]

[features]
# Enable this option when using a nightly compiler to possibly boost performance. DO NOT use when not using a nightly compiler. EXPERIMENTAL
nightly = []
# This option makes the software AES implementation constant-time, but very slow. Has no effect if another implementation is selected
constant-time = []

[dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
hex = "0.4.3"
lazy_static = "1.5.0"
